web-infras/parser/tests/fixtures/babel/es2022/class-private-methods/failure-name-constructor/output.txt
[SyntaxError]: Classes may not have a private field named '#constructor'. (2,3)
2|  #constructor() {};
 | ^
